@@ -10,15 +10,41 @@ touches|t
 intersects|t
 crosses|f
 crosses|t
-within|t
-within|f
-within|f
-within|t
+within100|t
+within101|f
+within102|f
+within103|f
+within104|t
+within105|t
+disjoint100|f
+disjoint101|f
+disjoint102|t
+disjoint103|f
+disjoint104|f
+disjoint105|t
+disjoint106|f
+disjoint107|f
+disjoint108|t
+disjoint109|f
+disjoint110|f
+disjoint111|t
+intersects100|t
+intersects101|t
+intersects102|f
+intersects103|t
+intersects104|t
+intersects105|f
+intersects106|t
+intersects107|t
+intersects108|f
+intersects109|t
+intersects110|t
+intersects111|f
 within119|f
 within120|f
-contains|f
-contains|f
-contains|t
+contains100|f
+contains101|f
+contains102|t
 overlaps|f
 isvalid|t
 NOTICE:  Self-intersection
